welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:9: error: ';' expected but 'return' found.
	} return test
          ^